<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/sage">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MainActivity">

        <androidx.cardview.widget.CardView
            android:id="@+id/cd_image"
            android:layout_width="match_parent"
            android:layout_height="375dp"
            android:layout_margin="20dp"
            app:cardCornerRadius="100dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
            <ImageView
                android:id="@+id/menuImage"
                android:layout_width="match_parent"
                android:layout_height="500dp"
                android:contentDescription="@string/bacon_king_burger"
                app:layout_constraintTop_toTopOf="@id/cd_image"
                app:layout_constraintStart_toStartOf="@id/cd_image"
                app:layout_constraintEnd_toEndOf="@id/cd_image"
                android:scaleType="centerCrop" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/menuName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:contentDescription="@string/nama_menu"
            android:text="@string/nama_menu"
            android:textColor="@android:color/white"
            app:layout_constraintTop_toBottomOf="@+id/cd_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>


        <androidx.cardview.widget.CardView
            android:id="@+id/cd_nutrisi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            app:cardCornerRadius="20dp"
            app:cardBackgroundColor="@color/dark_sage"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/menuName"
            app:layout_constraintEnd_toEndOf="parent">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/nutrisi"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textSize="24sp"/>
            <TextView
                android:id="@+id/detailNutrisi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginStart="65dp"
                android:layout_marginEnd="40dp"
                android:layout_marginBottom="16dp"
                android:contentDescription="@string/isi_data_nutrisi"
                android:text="@string/isi_data_nutrisi"
                android:textSize="12sp"
                android:textColor="@android:color/white"
                app:layout_constraintTop_toBottomOf="@+id/cd_nutrisi"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cd_kalori"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            app:cardCornerRadius="20dp"
            app:cardBackgroundColor="@color/dark_sage"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cd_nutrisi"
            app:layout_constraintEnd_toEndOf="parent">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/kalori"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textSize="24sp"/>
            <TextView
                android:id="@+id/detailKalori"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginStart="65dp"
                android:layout_marginEnd="40dp"
                android:layout_marginBottom="16dp"
                android:contentDescription="@string/detail_kalori"
                android:text="@string/detail_kalori"
                android:textSize="12sp"
                android:textColor="@android:color/white"
                app:layout_constraintTop_toBottomOf="@+id/cd_kalori"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />
            <TextView
                android:id="@+id/detailpersentaseKalori"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginStart="65dp"
                android:layout_marginEnd="40dp"
                android:layout_marginBottom="16dp"
                android:contentDescription="@string/persentase_kalori"
                android:text="@string/persentase_kalori"
                android:textSize="12sp"
                android:textColor="@android:color/white"
                app:layout_constraintTop_toBottomOf="@+id/detailKalori"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.cardview.widget.CardView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>